Removed compilation warning from openxavatest