@@ -11,7 +11,7 @@ public class OnChangeSubfamilySearchAction extends OnChangeSearchAction {
 	
 	public void execute() throws Exception {
 		if (getView().getValueInt("number") == 0) {
-			getView().setValue("number", new Integer("1"));
+			getView().setValue("number", Integer.valueOf("1"));
 		}
 		super.execute();
 	}
