@@ -257,7 +257,7 @@ public class Product2 {
 	
  	public static Product2 findByNumber(long number) throws NoResultException { 	 			
  		Query query = XPersistence.getManager().createQuery("from Product2 as o where o.number = :number"); 
-		query.setParameter("number", new Long(number));  	
+		query.setParameter("number", Long.valueOf(number));  	
 		return (Product2) query.getSingleResult();
 	} 
 
